# roughtime-rs

./: Cargo.toml  README.md  servers.toml
crates/roughtime-bag/: Cargo.toml
crates/roughtime-bag/src/: builder.rs  format.rs  lib.rs
crates/roughtime-client/: Cargo.toml
crates/roughtime-client/src/: client.rs  lib.rs  request.rs  verify.rs
crates/roughtime-wire/: Cargo.toml
crates/roughtime-wire/src/: framing.rs  lib.rs  message.rs  tags.rs
src/: main.rs
