[package]
name = "roughtime-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Roughtime client: UDP query + response verification"

[dependencies]
roughtime-wire = { path = "../roughtime-wire" }
ed25519-dalek = { version = "2", features = ["alloc"] }
sha2 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
